[tool.poetry]
name = "genlib"
version = "0.1.0"
description = ""
authors = ["Alex J. Champandard <alexjc@nucl.ai>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.5"
watchdog = "^0.9.0"
reloader = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^18.9b0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
